# docs/swagger.json
@@ -1,17 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample swagger for Fiber",
-        "title": "Fiber Example API",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "email": "fiber@swagger.io"
-        },
-        "license": {
-            "name": "Apache 2.0",
-            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-        },
+        "title": "Blanq Invoice API",
+        "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
@@ -27,13 +18,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Authentication"
                 ],
                 "summary": "Signup",
                 "parameters": [
                     {
-                        "description": "Create User",
-                        "name": "input",
+                        "type": "string",
+                        "description": "With the Bearer prefix",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": " ",
+                        "name": "CreateUserInput",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -45,22 +43,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/util.ApiResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/auth.User"
-                                        },
-                                        "errors": {
-                                            "type": "object"
-                                        }
-                                    }
-                                }
-                            ]
+                            "$ref": "#/definitions/util.SuccessResponse-auth_User"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/util.ErrorResponse"
                         }
                     }
                 }
@@ -123,19 +112,28 @@
                 }
             }
         },
-        "util.ApiResponse": {
+        "util.ErrorResponse": {
             "type": "object",
             "properties": {
-                "data": {},
                 "errors": {
                     "type": "array",
-                    "items": {}
+                    "items": {
+                        "type": "string"
+                    }
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "util.SuccessResponse-auth_User": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/auth.User"
                 },
-                "success": {
-                    "type": "boolean"
+                "message": {
+                    "type": "string"
                 }
             }
         }
